Fix style on IE

--- a/app/assets/stylesheets/shared/mailing_list.css.scss
+++ b/app/assets/stylesheets/shared/mailing_list.css.scss
@@ -22,7 +22,7 @@
       }
       #mailchimp_email{
         border: 0;
-        padding: 10px 10px;
+        padding: 14px 10px;
         font-family: 'fira_sansregular';
         color: #888888;
         background: #fff;
@@ -32,7 +32,7 @@
         box-shadow: 0px 3px 2px #ccc;
         width: 76%;
         float: left;
-        line-height: 22px;
+        line-height: 15px;
       }
       .btn-submit{
         padding: 8px 15px;
